Fixing overflow 3

--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@
     animation-name: move, rotate;
     animation-duration: 4s;
     animation-iteration-count: infinite;
+}
+.soonImg {
     overflow: hidden;
-    
 }
